--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "@babel/preset-flow": "^7.12.1",
     "@commitlint/cli": "^17.1.2",
     "@commitlint/config-conventional": "^17.0.3",
-    "@types/lodash": "4.17.13",
+    "@types/lodash-es": "^4.17.12",
     "@types/node": "^22.10.2",
     "@typescript-eslint/eslint-plugin": "^4.29.0",
     "@typescript-eslint/experimental-utils": "^2.24.0",
@@ -80,7 +80,7 @@
     }
   },
   "dependencies": {
-    "lodash": "^4.17.15",
+    "lodash-es": "^4.17.21",
     "mitt": "^3.0.0",
     "tinycolor2": "^1.4.2"
   },
