--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@commitlint/config-conventional": "^17.0.3",
     "@types/lodash-es": "^4.17.12",
     "@types/node": "^22.10.2",
+    "@types/tinycolor2": "^1.4.6",
     "@typescript-eslint/eslint-plugin": "^4.29.0",
     "@typescript-eslint/experimental-utils": "^2.24.0",
     "@typescript-eslint/parser": "^4.29.0",
